--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seval",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -8,8 +8,8 @@
     "coverage": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' c8 -r html ./node_modules/mocha/bin/mocha --require ts-node/register tests/**/*.ts"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Árni Dagur",
+  "license": "MIT",
   "devDependencies": {
     "@types/mocha": "^9.1.1",
     "c8": "^7.11.2",
@@ -20,7 +20,6 @@
   "dependencies": {
     "@types/acorn": "^4.0.6",
     "@types/estree": "^0.0.51",
-    "acorn": "^8.7.1",
-    "acorn-walk": "^8.2.0"
+    "acorn": "^8.7.1"
   }
 }
